
 * LUCENE-4060: Fix a synchronization bug in 
   DirectoryTaxonomyWriter.addTaxonomies(). Also, the method has been renamed to
   addTaxonomy and now takes only one Directory and one OrdinalMap.
   (Shai Erera, Gilad Barkai)

 * LUCENE-4074: FST Sorter BufferSize creates a negative buffer size due to an
   32 bit signed integer overflow if BufferSize >= 2048MB is passed.
   (Simon Willnauer)
 
Tests
 
 * LUCENE-3919, LUCENE-3969, LUCENE-3990: more thorough testing of analysis 
   chains.  (Uwe Schindler, Mike McCandless, Robert Muir)
 
======================= Lucene 3.6.0 ================

Changes in backwards compatibility policy

 * LUCENE-3626: The internal implementation classes in PKIndexSplitter
   and MultiPassIndexSplitter were made private as they now work
   per segment.  (Uwe Schindler)
   
 * LUCENE-3807: Cleaned up Suggest / Lookup API. Term weights (freqs) are now
   64bit signed integers instead of 32bit floats. Sorting of terms is now a 
   disk based merge sort instead of an in-memory sort. The Lookup API now 
   accepts and returns CharSequence instead of String which should be converted
   into a String before used in a datastructure that relies on hashCode / equals.
   (Simon Willnauer)
  
Changes in Runtime Behavior

 * LUCENE-3698: FastVectorHighlighter no longer adds a multi value separator
   to the end of the highlighted text. (Shay Banon via Koji Sekiguchi)
   
 * LUCENE-3867, LUCENE-3886: Use RAMUsageEstimator for memory estimations
   in MemoryIndex. Because of more precise calculations, results may differ.
   (Uwe Schindler)

New Features

 * LUCENE-3596: DirectoryTaxonomyWriter extensions can override createIndexWriterConfig() 
   and modify how its internal index writer is opened. (Doron Cohen)

 * SOLR-2982: Added phonetic encoders to contrib/analyzers/phonetic:
   Metaphone, Soundex, Caverphone, Beider-Morse, etc.  (Robert Muir)

 * LUCENE-2906: Added CJKBigramFilter that forms bigrams from StandardTokenizer or