@@ -39,4 +39,18 @@ public class HunspellDictionaryTest extends LuceneTestCase {
     affixStream.close();
     dictStream.close();
   }
+
+  @Test
+  public void testCompressedHunspellDictionary_loadDicAff() throws IOException, ParseException {
+    InputStream affixStream = getClass().getResourceAsStream("testCompressed.aff");
+    InputStream dictStream = getClass().getResourceAsStream("testCompressed.dic");
+
+    HunspellDictionary dictionary = new HunspellDictionary(affixStream, dictStream, TEST_VERSION_CURRENT);
+    assertEquals(3, dictionary.lookupSuffix(new char[]{'e'}, 0, 1).size());
+    assertEquals(1, dictionary.lookupPrefix(new char[]{'s'}, 0, 1).size());
+    assertEquals(1, dictionary.lookupWord(new char[]{'o', 'l', 'r'}, 0, 3).size());
+
+    affixStream.close();
+    dictStream.close();
+  }
 }
